# ox_fltk

./: CHANGELOG.md  hie.yaml  ox-fltk.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/003e84eb/: cabal_macros.h
.stack-work/ghci/22527299/: cabal_macros.h
.stack-work/ghci/3427ebc7/: cabal_macros.h
.stack-work/ghci/677c6ec0/: cabal_macros.h
.stack-work/ghci/6b9e47bd/: cabal_macros.h
.stack-work/ghci/85168c75/: cabal_macros.h
.stack-work/ghci/9a3fcfdd/: cabal_macros.h
.stack-work/ghci/d60d32ca/: cabal_macros.h
fltkhs/: stack.yaml
src/: AdditionLib.hs  Interface.hs  InterfaceLib.hs  Logic.hs  Main.hs
