name : ox-fltk
version : 0.0.0.1
synopsis : Cross and Zeros
license:             AllRightsReserved
license-file:        LICENSE
description:
    project for haskell
category: UI,Graphics
cabal-version: >=2.0

custom-setup
  setup-depends:
      Cabal >=2.4.0.0 && <4
    , base >=4.4
    , filepath

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

Executable ox-fltk
  Main-Is: Main.hs
  Hs-Source-Dirs: src/
  other-modules: Interface, 
                 AdditionLib,
                 Logic,
                 InterfaceLib
  Build-Depends:
    bytestring >= 0.10.10.0,
    directory >= 1.3.4.0,
    random >= 1.1,
    strict >= 0.3.2,
    base == 4.*,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0
  default-language: Haskell2010
  ghc-Options: -Wall -threaded
